--- a/views/faq.html
+++ b/views/faq.html
@@ -184,7 +184,7 @@
       </div>
 
 			<% if (_id) { %>
-				<form id="faqform" class="" action="/post/faq" method="post">
+				<form id="faqform" class="" action="/faqform/post" method="post">
 					<label for="form_subject">Subject:</label>
 					<select id="form_subject" name="subject">
 						<option value="general">general</option>
