--- a/views/logout.html
+++ b/views/logout.html
@@ -121,7 +121,7 @@
 		</div>
 	</footer>
 </div>
-<script type="text/javascript" src="/scripts/util.js"></script>
+<!-- <script type="text/javascript" src="/scripts/util.js"></script> -->
 <script type="text/javascript" src="/scripts/custom_menu.js"></script>
 
 </body>
