--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -90,6 +90,9 @@
 	<div class="row intro">
 		<div class="col-12 admin_cm">
 			<h2>Thank you !</h2>
+			<p>
+				For making use of our services.
+			</p>
 		</div>
 	</div>
 </section>
@@ -101,7 +104,7 @@
 	</footer>
 </div>
 	<script type="text/javascript" src="/scripts/util.js"></script>
-	<script type="text/javascript" src="/scripts/index.js"></script>
+	<!-- <script type="text/javascript" src="/scripts/index.js"></script> -->
 	<script type="text/javascript" src="/scripts/custom_menu.js"></script>
 
 </body>
