--- a/views/downloads.html
+++ b/views/downloads.html
@@ -146,7 +146,7 @@
 		<div class="row-12">
 			Copyright 2018 <a href="http://www.e-office.com">E-Office</a>
 		</div>
-
+	</footer>
 </div>
 	<script type="text/javascript" src="/scripts/custom_menu.js"></script>
 </body>
