--- a/views/faqmail.html
+++ b/views/faqmail.html
@@ -6,8 +6,8 @@
 	<body>
 		<div id="wrap">
 
-			<header class = "fluid-container">
-
+			<header class = "fluid-container" style="background-color: #35B297;">
+				HEADER
 			</header>
 
 			<div class="fluid-container">
@@ -18,17 +18,19 @@
 				</div>
 			</div>
 
-			<section class="container main">
+			<section class="container main" style="background-color: #eee;">
 				<div class="row intro">
 					<div class="col-12">
-							TEST
-							<%= title %>
+							<h1>TEST</h1>
+							<h2><%= title %></h2>
+							<p><%= body %></p>
 					</div>
 				</div>
 			</section>
 
-			<footer class="fluid-container">
+			<footer class="fluid-container" style="background-color: #35B297;">
 				<div class="row-12">
+					FOOTER
 					Copyright 2018 <a href="http://www.e-office.com">E-Office</a>
 				</div>
 			</footer>
