--- a/views/logout.html
+++ b/views/logout.html
@@ -48,11 +48,11 @@
 					<div class="col-2 col-sm-9 col-xs-9 col-auto">
 						<% if (typeof lang == 'undefined' || lang == 'en') { %>
 						<div class="mobile-lang">
-							<a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a>
+							<a href="?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a>
 						</div>
 						<% } else if (lang == 'nl') { %>
 							<div class="mobile-lang">
-								<a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a>
+								<a href="?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a>
 							</div>
 						<% } %>
 						<a id="hamburger" href="#mainmenu"></a>
@@ -77,9 +77,9 @@
 								<% } %>
 
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
-									<li class="lang"><a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a></li>
+									<li class="lang"><a href="?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a></li>
 								<% } else if (lang == 'nl') { %>
-									<li class="lang"><a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a></li>
+									<li class="lang"><a href="?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a></li>
 								<% } %>
 							</ul>
 						</nav>
@@ -121,7 +121,6 @@
 		</div>
 	</footer>
 </div>
-<!-- <script type="text/javascript" src="/scripts/util.js"></script> -->
 <script type="text/javascript" src="/scripts/custom_menu.js"></script>
 
 </body>
