--- a/views/faq.html
+++ b/views/faq.html
@@ -186,16 +186,16 @@
 			<% if (_id) { %>
 				<form id="faqform" action="/faqform/post" method="post">
 					<label for="form_subject">Subject:</label>
-					<select id="form_subject" name="subject" value="">
-						<option value="general">general</option>
-						<option value="personal">personal</option>
-						<option value="banking">banking</option>
-						<option value="technical">technical</option>
+					<select id="form_subject" name="form_subject" value="">
+						<option value="general">General</option>
+						<option value="personal"><p></p>ersonal</option>
+						<option value="banking">Banking</option>
+						<option value="technical">Technical</option>
 					</select>
 					<label for="form_organisation">Organisation:</label>
-					<input id="form_organisation" type="text" name="form_organisation" title="<%= organisationName %>" value="<%= organisationName %>" disabled="disabled">
+					<input id="form_organisation" type="text" name="form_organisation" title="<%= organisationName %>" value="<%= organisationName %>">
 					<label for="form_email">Email:</label>
-					<input id="form_email" type="text" name="form_email" title="<%= JSON.parse(organisationEmail) %>" value="<%= JSON.parse(organisationEmail) %>" disabled="disabled">
+					<input id="form_email" type="text" name="form_email" title="<%= JSON.parse(organisationEmail) %>" value="<%= JSON.parse(organisationEmail) %>">
 					<label for="form_question">Question:</label>
 					<textarea id="form_question" name="form_question" rows="8"></textarea>
 					<input type="submit" name="button" value="Send">
@@ -237,9 +237,9 @@
          $(this).parent('.question').toggleClass('active');
       });
     })
-		function run() {
-				document.getElementById("srt").value = document.getElementById("Ultra").value;
-		}
+		// function run() {
+		// 		document.getElementById("srt").value = document.getElementById("form_subject").value;
+		// }
   });
 </script>
 <script src="./lib/domJSON.js"></script>
