--- a/public/style/style.css
+++ b/public/style/style.css
@@ -18,20 +18,20 @@ body {
 	height:100%;
 }
 
-/* header footer common */
-header {
+/* #wrap > header #wrap > footer common */
+#wrap > header {
 	height:103px;
 	padding-bottom:12px;
 	position: relative;
 }
-header, footer {
+#wrap > header, #wrap > footer {
 	width: 100%;
 	text-align: center;
 }
-header + .fluid-container .col {
+#wrap > header + .fluid-container .col {
 	box-shadow: inset 0 0px 12px black;
 }
-header + .fluid-container {
+#wrap > header + .fluid-container {
 	margin-bottom:-6rem;
 }
 .fluid-container {
@@ -94,6 +94,9 @@ header + .fluid-container {
 		border:none;
 }
 
+.main {
+	position: relative;
+}
 body {
   background-color: #efefef;
   font-family: Lato,sans-serif;
@@ -118,11 +121,11 @@ a:hover {color:#8d6daa;}
 }
 
 /* positions */
-header {
+#wrap > header {
 	padding-top: 20px;
 	font-size: 1.3em;
 }
-footer {
+#wrap > footer {
 	padding: 10px;
 	font-size: .8rem;
 	background: #fff;
@@ -311,8 +314,8 @@ a.logo {
 	background-color: #35B297;
 	border-radius: 50%;
 }
-header .mobile-lang {display:none;}
-header {
+#wrap > header .mobile-lang {display:none;}
+#wrap > header {
 	background:#633689;
 	background:#fff;
 	overflow: auto;
@@ -613,6 +616,65 @@ border-bottom:1px solid #ccc;
 	opacity:.6;
 }
 
+/* BLOG */
+.blog_post form input[type="submit"]{
+	margin-bottom:1.5em;
+}
+.blog_post {
+	background:#fff;
+	border:1px solid #35B297;
+	text-align:center;
+	display:block;
+	margin:2em auto;
+	width:760px;
+	padding:1em 2em;
+	position: relative;
+}
+.blog_post	header,
+.blog_post	.body,
+.blog_post footer {
+	 padding:1em;
+ }
+.blog_post pre {
+	white-space: pre-line;
+}
+ .blog_post	header {
+	 display: block;
+	 width: 80%;
+	 margin: auto;
+	 border-bottom: 1px solid #35B297;
+ }
+ .blog_post .body {
+   padding: 2em 1em;
+ }
+ .blog_post footer {
+	 	display: block;
+		width: 60%;
+		margin: auto;
+		border-top: 1px solid lightgray;
+ }
+ .blog_post footer pre {
+		color: gray;
+ }
+ .blog_post select, .blog_post input, .blog_post textarea {
+	 	outline-color: #35B297;
+	 	width: 100%;
+ }
+
+#blog_delete_form {}
+#blog_delete_form input[type="submit"] {
+	position:absolute;
+	border-radius:0;
+	right:0;
+	top:0;
+	margin:0;
+}
+
+#blog_post_form {}
+#blog_post_form label {
+	display:block;
+}
+#blog_post_form input {}
 
 
 /* //// RESPONSIVE STYLE */
@@ -628,7 +690,7 @@ border-bottom:1px solid #ccc;
 		margin-bottom:0;
 		min-width:45px;
 	}
-	header .col-3.mr-auto {
+	#wrap > header .col-3.mr-auto {
 		text-align:center;
 	}
 	#faqform label {padding:0;margin-bottom:.25em;}
@@ -664,7 +726,7 @@ border-bottom:1px solid #ccc;
 	#mm-mainmenu .lang {display:none;}
 	#hamburger {display:block;top:auto;bottom:20px;}
 	.login {display:block;white-space: nowrap;bottom: 0;right: 23px;}
-	header .mobile-lang {
+	#wrap > header .mobile-lang {
 		display: inline-block;
 		position: absolute;
 		right: 90px;
