--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
 			<div class="col-3 mr-auto">
 				<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
 				<a class="logo" href="/">
-					<img class="newappIcon" src="images/talkteam_logo1.png"><%= lang %>
+					<img class="newappIcon" src="images/talkteam_logo1.png">
 				</a>
 			</div>
 			<div class="col-2 col-sm-9 col-xs-9 col-auto">
