--- a/views/register.html
+++ b/views/register.html
@@ -47,11 +47,11 @@
 					<div class="col-2 col-sm-9 col-xs-9 col-auto">
 						<% if (typeof lang == 'undefined' || lang == 'en') { %>
 						<div class="mobile-lang">
-							<a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a>
+							<a href="?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a>
 						</div>
 						<% } else if (lang == 'nl') { %>
 							<div class="mobile-lang">
-								<a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a>
+								<a href="?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a>
 							</div>
 						<% } %>
 						<a id="hamburger" href="#mainmenu"></a>
@@ -76,9 +76,9 @@
 								<% } %>
 
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
-									<li class="lang"><a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a></li>
+									<li class="lang"><a href="?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a></li>
 								<% } else if (lang == 'nl') { %>
-									<li class="lang"><a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a></li>
+									<li class="lang"><a href="?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a></li>
 								<% } %>
 							</ul>
 						</nav>
@@ -107,8 +107,15 @@
 	<div class="row intro">
 
 		<div class="col-12">
-			<h2>Register</h2>
-			<p>Register your username and password here.</p>
+
+			<% if (typeof lang == 'undefined' || lang == 'en') { %>
+				<h2>Register</h2>
+				<p>Register your username and password here.</p>
+			<% } else if (lang == 'nl') { %>
+				<h2>Registreer</h2>
+				<p>Registreer uw gebruikersnaam en wachtwoord hier.</p>
+			<% } %>
+
 			<form id="regForm" class="shortForm" method="post">
 			    <div>
 			        <label>Username:</label>
