--- a/views/register.html
+++ b/views/register.html
@@ -116,7 +116,7 @@
 				<p>Registreer uw gebruikersnaam en wachtwoord hier.</p>
 			<% } %>
 
-			<form id="regForm" class="shortForm" method="post">
+			<form id="regForm" class="shortForm" action="/post/registerform" method="post">
 			    <div>
 			        <label>Username:</label>
 			        <input type="text" name="username"/><br/>
@@ -126,7 +126,7 @@
 			        <input type="password" name="password"/>
 			    </div>
 					<div>
-						<input type="submit" onclick="/post/registerform">
+						<input type="submit">
 			    </div>
 			</form>
 		</div>
