--- a/views/login.html
+++ b/views/login.html
@@ -115,7 +115,7 @@
 						<input type="text" name="username" value="200077318">
 				</div>
 				<div>
-						<label>Username:</label>
+						<label>Password:</label>
 						<input type="text" name="password" value="nonechecked">
 				</div>
 				<input type="submit" name="button" value="login">
