--- a/public/style/style.css
+++ b/public/style/style.css
@@ -43,17 +43,22 @@ body {
 #mainmenu ul {
 	list-style:none;
 	padding:0 10px;
-	/* margin-top:.5rem; */
   margin-bottom: 0;
 	margin-top:1rem;
 
 }
+#mainmenu>ul>li:hover > a{
+	border-bottom: solid 1px #8d6daa;
+	text-decoration: none;
+	color: #8d6daa;
+}
 #mainmenu ul li {
 	display:inline;
 	margin-left:20px;
+	position: relative;
 }
 
-#mainmenu ul li a:hover {
+#mainmenu > ul > li > a:hover {
 	border-bottom: solid 1px #8d6daa;
 	text-decoration: none;
 	color: #8d6daa;
@@ -62,7 +67,7 @@ body {
 	color: #fff;
   color: #35B297;
 	text-transform: uppercase;
-	font-size: 15px;
+	font-size: 14px;
 	display: inline-block;
 	padding: 8px 2px;
 	vertical-align: middle;
@@ -70,7 +75,7 @@ body {
 	border-bottom: solid 1px transparent;
 	transition: border-bottom .25s ease;
 }
-#mainmenu ul li.active a {
+#mainmenu > ul > li.active > a {
 	border-bottom:1px solid #35B297;
 }
 
@@ -85,15 +90,55 @@ body {
 	text-align: center;
 	transition: background-color .25s ease;
 }
-#mainmenu ul li.lang a:hover {
+#mainmenu > ul > li.lang > a:hover {
 	text-decoration: none;
 	border-bottom: solid 1px transparent;
 }
-#mainmenu ul li.lang:hover {
+#mainmenu > ul li.lang:hover {
     /* background-color: #3f125e; */
 		text-decoration: none;
 		border:none;
 }
+
+#mainmenu ul li ul {
+	display:none;
+	position: absolute;
+	top:100%;
+	right: 0;
+	margin:0;
+	padding:0;
+	padding-top:10px;
+	background:white;
+	width:150px;
+	margin-top:9px;
+}
+
+#mainmenu ul>li:hover ul {
+	display:block;
+}
+
+#mainmenu ul>li>ul>li>a {
+	padding:.5em 10px;
+	font-size:12;
+	transition:.3s ease all;
+}
+#mainmenu ul>li>ul>li>a:hover {
+	background:	#35B297;
+	color:#fff;
+	text-decoration: none;
+}
+
+#mainmenu ul li ul  li {
+	display:block;
+	margin:0;
+}
+
+#mainmenu ul li ul  li a {
+	display:block;
+	text-align:left;
+
+}
+
 
 .main {
 	position: relative;
@@ -320,7 +365,7 @@ a.logo {
 #wrap > header {
 	background:#633689;
 	background:#fff;
-	overflow: auto;
+	overflow: visible;
 	display: flex;
 	flex-direction: column;
 	border-bottom: 1px solid purple;
@@ -404,6 +449,27 @@ dl.dl-horizontal {
 	right:20px;
 	bottom:20px;
 	z-index:999;
+}
+#adminPost {
+	display:inline-block;
+}
+.adminPanel a[href="/toc"] {
+	height: 42px;
+	background-color: #633689;
+	color: #fff;
+	border-radius: 6px;
+	display: inline-block;
+	line-height: 42px;
+	border: 0;
+	cursor: pointer;
+	text-decoration: none;
+	font-size: 14px;
+	font-weight: 600;
+	padding: 0 20px;
+	transition: .3s ease all;
+	margin-left: 20px;
+	text-align: center;
+	width: 124px;
 }
 .shortForm {
 	max-width:300px;
@@ -622,6 +688,24 @@ border-bottom:1px solid #ccc;
 .blog_post form input[type="submit"]{
 	margin-bottom:1.5em;
 }
+.container .blog_post:nth-child(even) {
+	background:#35B297;
+	color:#fff;
+}
+.container .blog_post:nth-child(even) p,
+.container .blog_post:nth-child(even) pre
+{color:#fff;}
+.container .blog_post:nth-child(even) footer a:hover {
+	text-decoration: none;
+}
+.container .blog_post:nth-child(even) footer a {
+	color:#fff;
+	text-decoration: underline;
+
+}
+.container .blog_post:nth-child(even) header {
+	border-bottom:1px solid lightgray;
+}
 .blog_post {
 	background:#fff;
 	border:1px solid #35B297;
@@ -639,6 +723,7 @@ border-bottom:1px solid #ccc;
  }
 .blog_post pre {
 	white-space: pre-line;
+	font-family:Lato,sans-serif
 }
  .blog_post	header {
 	 display: block;
@@ -671,8 +756,8 @@ border-bottom:1px solid #ccc;
 #blog_delete_form input[type="submit"] {
 	position:absolute;
 	border-radius:0;
-	right:0;
-	top:0;
+	right: -1px;
+	top: -1px;
 	margin:0;
 	width:30px;
 	height:30px;
@@ -684,8 +769,18 @@ border-bottom:1px solid #ccc;
 #blog_post_form label {
 	display:block;
 }
-#blog_post_form input {}
 
+
+#wrap > header + .fluid-container.gMap {
+	margin-top:-4rem;
+}
+#gMap {
+	display:block;
+	width:100%;
+	height:450px;
+	position: relative;
+	z-index:0;
+}
 
 /* //// RESPONSIVE STYLE */
 /* // Extra small devices (portrait phones, less than 576px)
