--- a/views/blog/blog.html
+++ b/views/blog/blog.html
@@ -61,25 +61,49 @@
 						<% if (typeof lang == 'undefined' || lang == 'en') { %>
 						  <li><a href="/home">Home</a></li>
 							<% if (!username) { %>
-								<li><a href="/register">Register</a></li>
+								<li>
+									<a href="/register">Register</a>
+									<ul>
+										<li><a href="/downloads">Downloads</a></li>
+									</ul>
+								</li>
+							<% } else if (username) { %>
+								<li><a href="/downloads">Downloads</a></li>
 							<% } %>
-						  <li><a href="/downloads">Downloads</a></li>
-						  <li><a href="/faq">F.A.Q</a></li>
-						  <li><a href="/news">News</a></li>
+						  <li>
+								<a href="/about">E-Office</a>
+								<ul>
+									<li><a href="/blog">Nieuws</a></li>
+									<li><a href="/faq">F.A.Q</a></li>
+									<li><a href="/terms">Algemene voorwaarde</a></li>
+								</ul>
+							</li>
 						<% } else if (lang == 'nl') { %>
 						  <li><a href="/home">Home</a></li>
 							<% if (!username) { %>
-								<li><a href="/register">Registreer</a></li>
+								<li>
+									<a href="/register">Register</a>
+									<ul>
+										<li><a href="/downloads">Downloads</a></li>
+									</ul>
+								</li>
+							<% } else if (username) { %>
+								<li><a href="/downloads">Downloads</a></li>
 							<% } %>
-						  <li><a href="/downloads">Downloads</a></li>
-						  <li><a href="/faq">F.A.Q</a></li>
-						  <li><a href="/news">Nieuws</a></li>
+						  <li>
+								<a href="/about">E-Office</a>
+								<ul>
+									<li><a href="/blog">Nieuws</a></li>
+									<li><a href="/faq">F.A.Q</a></li>
+									<li><a href="/terms">Algemene voorwaarde</a></li>
+								</ul>
+							</li>
 						<% } %>
 
 						<% if (typeof lang == 'undefined' || lang == 'en') { %>
-							<li class="lang"><a href="?clang=nl"><img src="../images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
+							<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
 						<% } else if (lang == 'nl') { %>
-							<li class="lang"><a href="?clang=en"><img src="../images/en.png" title="Vertaal naar: Engels" alt="British flag" height="34" width="34"></a></li>
+							<li class="lang"><a href="?clang=en"><img src="images/en.png" title="Vertaal naar: Engels" alt="British flag" height="34" width="34"></a></li>
 						<% } %>
 					</ul>
 				</nav>
@@ -117,13 +141,12 @@
 					</form>
 				<% } %>
 				<header>
-					<%= blog_posts[i].blogpost_title %>
+					<h2><%= blog_posts[i].blogpost_title %></h2>
 				</header>
 				<div class="body">
 					<pre><%= blog_posts[i].blogpost_body %></pre>
 				</div>
 				<footer>
-					<pre><%= blog_posts[i].blogpost_date_format %></pre>
 					<% if (typeof blog_posts[i].blogpost_file == 'undefined') { %>
 						<% } else if (blog_posts[i].blogpost_file) { %>
 							<% if ( blog_posts[i].blogpost_file['mimetype'].startsWith("image") ) { %>
@@ -136,11 +159,16 @@
 							<% } %>
 
 					<% } %>
+					<pre><%= blog_posts[i].blogpost_date_format %></pre>
+
 				</footer>
 			</article>
 		<% } %>
 
-		<% if (typeof admin == 'undefined') { %>
+	<% if (username) { %>
+	  <div class="adminPanel">
+	    <a href="/toc">Configuration</a>
+	  </div>
 
 		<% } else if (admin) { %>
 			<article class="blog_post">
@@ -163,6 +191,24 @@
 					<input type="submit">
 				</form>
 			</article>
+		<% } %>
+
+		<% if (username && admin ) { %>
+			<div class="adminPanel">
+				<form id="adminPost" action="/admin_cm/post" method="post">
+					<input id="jsonParser" type="text" name="_jsonParser" hidden="true" value="">
+					<input id="currentPageVar" type="text" name="currentPageVar" hidden="true" value='<%= title %>'>
+					<input id="admin_ApplyButton" name="button" value="Apply">
+					<input id="admin_SafeButton" name="button" value="Save" type="submit">
+				</form>
+				<a href="/toc">Configuration</a>
+
+				<div id="setAdmin" hidden="true">toggle setAdmin</div>
+			</div>
+
+		<% } else if (username) { %>
+			<div class="adminPanel">
+			</div>
 		<% } %>
 
 		<input id="jsonConverter" type="text" name="_jsonConverter" hidden="true" value='<%= _jsonConverter %>'>
