--- a/views/index.html
+++ b/views/index.html
@@ -61,19 +61,43 @@
 						<% if (typeof lang == 'undefined' || lang == 'en') { %>
 						  <li><a href="/home">Home</a></li>
 							<% if (!username) { %>
-								<li><a href="/register">Register</a></li>
+								<li>
+									<a href="/register">Register</a>
+									<ul>
+										<li><a href="/downloads">Downloads</a></li>
+									</ul>
+								</li>
+							<% } else if (username) { %>
+								<li><a href="/downloads">Downloads</a></li>
 							<% } %>
-						  <li><a href="/downloads">Downloads</a></li>
-						  <li><a href="/faq">F.A.Q</a></li>
-						  <li><a href="/news">News</a></li>
+						  <li>
+								<a href="/about">E-Office</a>
+								<ul>
+									<li><a href="/blog">News</a></li>
+									<li><a href="/faq">F.A.Q</a></li>
+									<li><a href="/terms">Terms & Conditions</a></li>
+								</ul>
+							</li>
 						<% } else if (lang == 'nl') { %>
 						  <li><a href="/home">Home</a></li>
 							<% if (!username) { %>
-								<li><a href="/register">Registreer</a></li>
+								<li>
+									<a href="/register">Register</a>
+									<ul>
+										<li><a href="/downloads">Downloads</a></li>
+									</ul>
+								</li>
+							<% } else if (username) { %>
+								<li><a href="/downloads">Downloads</a></li>
 							<% } %>
-						  <li><a href="/downloads">Downloads</a></li>
-						  <li><a href="/faq">F.A.Q</a></li>
-						  <li><a href="/news">Nieuws</a></li>
+						  <li>
+								<a href="/about">E-Office</a>
+								<ul>
+									<li><a href="/blog">Nieuws</a></li>
+									<li><a href="/faq">F.A.Q</a></li>
+									<li><a href="/terms">Algemene voorwaarde</a></li>
+								</ul>
+							</li>
 						<% } %>
 
 						<% if (typeof lang == 'undefined' || lang == 'en') { %>
@@ -178,9 +202,8 @@
 				</li>
 			</ul>
 		</div>
-		<% if (typeof admin == 'undefined') { %>
 
-		<% } else if (admin) { %>
+		<% if (username && admin ) { %>
 			<div class="adminPanel">
 				<form id="adminPost" action="/admin_cm/post" method="post">
 					<input id="jsonParser" type="text" name="_jsonParser" hidden="true" value="">
@@ -188,7 +211,14 @@
 					<input id="admin_ApplyButton" name="button" value="Apply">
 					<input id="admin_SafeButton" name="button" value="Save" type="submit">
 				</form>
+				<a href="/toc">Configuration</a>
+
 				<div id="setAdmin" hidden="true">toggle setAdmin</div>
+			</div>
+
+		<% } else if (username) { %>
+			<div class="adminPanel">
+				<a href="/toc">Configuration</a>
 			</div>
 		<% } %>
 
