--- a/views/logout.html
+++ b/views/logout.html
@@ -61,25 +61,49 @@
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
 								  <li><a href="/home">Home</a></li>
 									<% if (!username) { %>
-										<li><a href="/register">Register</a></li>
+										<li>
+											<a href="/register">Register</a>
+											<ul>
+												<li><a href="/downloads">Downloads</a></li>
+											</ul>
+										</li>
+									<% } else if (username) { %>
+										<li><a href="/downloads">Downloads</a></li>
 									<% } %>
-								  <li><a href="/downloads">Downloads</a></li>
-								  <li><a href="/faq">F.A.Q</a></li>
-								  <li><a href="/news">News</a></li>
+								  <li>
+										<a href="/about">E-Office</a>
+										<ul>
+											<li><a href="/blog">Nieuws</a></li>
+											<li><a href="/faq">F.A.Q</a></li>
+											<li><a href="/terms">Algemene voorwaarde</a></li>
+										</ul>
+									</li>
 								<% } else if (lang == 'nl') { %>
 								  <li><a href="/home">Home</a></li>
 									<% if (!username) { %>
-										<li><a href="/register">Registreer</a></li>
+										<li>
+											<a href="/register">Register</a>
+											<ul>
+												<li><a href="/downloads">Downloads</a></li>
+											</ul>
+										</li>
+									<% } else if (username) { %>
+										<li><a href="/downloads">Downloads</a></li>
 									<% } %>
-								  <li><a href="/downloads">Downloads</a></li>
-								  <li><a href="/faq">F.A.Q</a></li>
-								  <li><a href="/news">Nieuws</a></li>
+								  <li>
+										<a href="/about">E-Office</a>
+										<ul>
+											<li><a href="/blog">Nieuws</a></li>
+											<li><a href="/faq">F.A.Q</a></li>
+											<li><a href="/terms">Algemene voorwaarde</a></li>
+										</ul>
+									</li>
 								<% } %>
 
 								<% if (typeof lang == 'undefined' || lang == 'en') { %>
-									<li class="lang"><a href="?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a></li>
+									<li class="lang"><a href="?clang=nl"><img src="images/nl.png" title="Translate to: Dutch" alt="Dutch flag" height="34" width="34"></a></li>
 								<% } else if (lang == 'nl') { %>
-									<li class="lang"><a href="?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a></li>
+									<li class="lang"><a href="?clang=en"><img src="images/en.png" title="Vertaal naar: Engels" alt="British flag" height="34" width="34"></a></li>
 								<% } %>
 							</ul>
 						</nav>
