--- a/views/terms.html
+++ b/views/terms.html
@@ -40,6 +40,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-3 mr-auto">
+						<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
 						<a class="logo" href="/">
 							<img class="newappIcon" src="images/talkteam_logo1.png">
 						</a>
@@ -129,33 +130,52 @@
 
 <section class="container main">
 	<div class="row intro">
-
-		<div class="col-12">
-
+		<div class="col-12 admin_cm">
 			<% if (typeof lang == 'undefined' || lang == 'en') { %>
-				<h2>Register</h2>
+				<h2>General terms & conditions</h2>
 				<p>Register your username and password here.</p>
 			<% } else if (lang == 'nl') { %>
-				<h2>Registreer</h2>
+				<h2>Algemene voorwaarden</h2>
 				<p>Registreer uw gebruikersnaam en wachtwoord hier.</p>
 			<% } %>
+			<h2>
 
-			<form id="regForm" class="shortForm" action="/post/registerform" method="post">
-			    <div>
-			        <label>Username:</label>
-			        <input type="text" name="username"/><br/>
-			    </div>
-			    <div>
-			        <label>Password:</label>
-			        <input type="password" name="password"/>
-			    </div>
-					<div>
-						<input type="submit">
-			    </div>
-			</form>
+			</h2>
+			<p>
+				Sit facer aliquip referrentur in, nibh aliquando ei sea. In inani graeci prodesset pro, quo te congue causae urbanitas. Duis nostro invidunt mei id, duo ex pertinax evertitur, at eos elitr legere elaboraret. Numquam denique ne qui, te sea hinc labores propriae. Vix veri utinam ei, vis cu ancillae definitiones, enim timeam veritus per ne.
+			</p>
+		</div>
+		<div class="col-12 admin_cm purplebox">
+			<h3>
+				Mel hinc atqui comprehensam
+			</h3>
+			<p>
+				Te est latine noluisse, suscipit convenire hendrerit ei est. Ex postulant sapientem pro, labores similique te has, eam at natum solet discere.
+			</p>
+			<p>
+				Ne usu movet sensibus argumentum. In eum solum nonumes menandri. Qui et quod autem detraxit, nec elit nostro invidunt ut.
+			</p>
 		</div>
 
-	</div>
+		<% if (username && admin ) { %>
+			<div class="adminPanel">
+				<form id="adminPost" action="/admin_cm/post" method="post">
+					<input id="jsonParser" type="text" name="_jsonParser" hidden="true" value="">
+					<input id="currentPageVar" type="text" name="currentPageVar" hidden="true" value='<%= title %>'>
+					<input id="admin_ApplyButton" name="button" value="Apply">
+					<input id="admin_SafeButton" name="button" value="Save" type="submit">
+				</form>
+				<a href="/toc">Configuration</a>
+
+				<div id="setAdmin" hidden="true">toggle setAdmin</div>
+			</div>
+
+		<% } else if (username) { %>
+			<div class="adminPanel">
+			</div>
+		<% } %>
+
+		<input id="jsonConverter" type="text" name="_jsonConverter" hidden="true" value='<%= _jsonConverter %>'>
 
 </section>
 
@@ -164,8 +184,9 @@
 			Copyright 2018 <a href="http://www.e-office.com">E-Office</a>
 		</div>
 	</footer>
-
 </div>
-	<script type="text/javascript" src="/scripts/custom_menu.js"></script>
+<script src="./lib/domJSON.js"></script>
+<script type="text/javascript" src="/scripts/admin_cm.js"></script>
+<script type="text/javascript" src="/scripts/custom_menu.js"></script>
 </body>
 </html>
